02-rollouts/canary/4-analysis/api-ro.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api-ro
  namespace: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
      name: api-po
  strategy:
    canary:
      stableService: api-svc
      canaryService: canary-api-svc
      canaryMetadata:
        labels:
          role: canary
      stableMetadata:
        labels:
          role: stable
      maxSurge: 25%
      maxUnavailable: 1
      steps:
      - setCanaryScale:
          weight: 25
      - setWeight: 25
      - pause: {}
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: api-httproute
            namespace: api
  template:
    metadata:
      labels:
        app: api
        name: api-po
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1-otel
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            port: 3000
            path: /healthz
        ports:
        - name: api-port
          containerPort: 3000
        - name: metrics
          containerPort: 9464
