02-rollouts/canary/4-analysis/gateways.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: api
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes: 
      namespaces: 
        from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-httproute
  namespace: api
spec:
  parentRefs:
  - name: api-gateway
    sectionName: http
    namespace: api
  hostnames:
  - api-192.168.39.201.nip.io
  rules:
    - matches:
      - path:
          value: /api
          type: PathPrefix
      backendRefs:
      - name: api-svc
        port: 3000
        weight: 1
      - name: canary-api-svc
        port: 3000
        weight: 1
